@@ -232,17 +232,17 @@ create the archive directory in
 .IR ~/.cache/duplicity/ .
 
 The archive directory can be shared between backups to multiple targets,
-because a subdirectory of the archive dir is used for individual backups (see 
+because a subdirectory of the archive dir is used for individual backups (see
 .B --name
 ).
 
-The combination of archive directory and backup name must be unique 
+The combination of archive directory and backup name must be unique
 in order to separate the data of different backups.
 
-The interaction between the 
-.B --archive-dir 
-and the 
-.B --name 
+The interaction between the
+.B --archive-dir
+and the
+.B --name
 options allows for four possible combinations for the location of the archive dir:
 
 .RS
@@ -536,7 +536,7 @@ characters or other characters that are not valid in a hostname.
 .BI "--scp-command " command
 This option only matters when using the ssh/scp backend.  The
 .I command
-will be used instead of scp to send or receive files.  The default
+will be used instead of scp to send or receive files.  The default command
 is "scp". To list and delete existing files, the sftp command is used.  See
 .BR --ssh-options
 and
@@ -547,8 +547,9 @@ and
 This option only matters when using the ssh/scp backend.  The
 .I command
 will be used instead of sftp for listing and deleting files.  The
-default is "sftp". File transfers are done using the scp command. See
-.BR --ssh-options
+default is "sftp". File transfers are done using the sftp command. See
+.BR --ssh-options ,
+.BR --use-scp ,
 and
 .BR --scp-command .
 
@@ -621,6 +622,13 @@ the user with respect to
 or
 .I --sign-key.
 
+.TP
+.BI --use-scp
+If this option is specified, then the ssh backend will use
+.I scp
+rather than
+.I sftp
+for the get and put backend operations.
 
 .TP
 .BI -v verb ", --verbosity " verb
