@@ -3,6 +3,9 @@ New in v0.6.07 (2009/??/??)
 Applied patch 467391 to close connection on a 401 and retry
 with authentication credentials.
 
+487686 re-add scp backend and make available via command line option
+Option --use-scp will use scp, not sftp, for get/put operations.
+
 
 New in v0.6.06 (2009/10/29)
 ---------------------------
